all product not working

--- a/src/app/home/components/customer-home/customer-home.component.html
+++ b/src/app/home/components/customer-home/customer-home.component.html
@@ -1,24 +1,44 @@
-<div class="mt-40" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="30">>
-    <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Jewel Rana</mat-card-title>
-          <mat-card-subtitle>Paikari.com</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://i.ibb.co/qkQ0rrg/feet-footwear-jump-nike-shoes-sneakers-1043835.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <h1>White Stylish Shoe</h1>
-          <h3>BDT 1000 /Piece</h3>
-          <p>this a samle shoe product</p>
-        </mat-card-content>
-        <div fxLayoutAlign="end end">
-            <mat-card-actions>
-                <button class="cursor-pointer" color="primary" mat-fab aria-label="Example icon-button with a heart icon" >
-                    <mat-icon>add_shopping_cart</mat-icon>
-                  </button>
-            </mat-card-actions>
-        </div>
-        
-      </mat-card>
+<div
+fxLayout="row"
+fxLayoutAlign="center center"
+fxLayoutGap="10px"
+class="mt-100"
+
+>
+<div >
+  <mat-card class="example-card" [class.mat-elevation-z8]="true">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image">
+        <img mat-card-avatar src="https://i.ibb.co/Jdx0NbM/27797943-1552092604911964-5726697049196892277-o.jpg">
+      </div>
+      <mat-card-title>Jewel Rana</mat-card-title>
+      <mat-card-subtitle>Paikari.com</mat-card-subtitle>
+    </mat-card-header>
+    <div *ngIf="productData">
+          <img [src]="productData.productImageUrl" />
+    </div>
+
+    <mat-card-content *ngIf="productData">
+      <h1>{{ productData.productname }}</h1>
+      <h3>BDT {{ productData.productprice }} /Unit</h3>
+      <h4>
+        Minimum Order- {{ productData.productquantity }}
+      </h4>
+      <p>{{ productData.productDescription }}</p>
+    </mat-card-content>
+    <div fxLayoutAlign="end end">
+      <mat-card-actions>
+        <button
+          class="cursor-pointer"
+          color="primary"
+          mat-fab
+          aria-label="Example icon-button with a heart icon"
+        >
+          <mat-icon>add_shopping_cart</mat-icon>
+        </button>
+      </mat-card-actions>
+    </div>
+  </mat-card>
+</div>
 </div>
   
