--- a/src/app/home/components/customer-home/customer-home.component.scss
+++ b/src/app/home/components/customer-home/customer-home.component.scss
@@ -8,6 +8,6 @@
   }
   
   .example-header-image {
-    background-image: url('https://i.ibb.co/Jdx0NbM/27797943-1552092604911964-5726697049196892277-o.jpg');
+    // background-image: url('https://i.ibb.co/Jdx0NbM/27797943-1552092604911964-5726697049196892277-o.jpg');
     background-size: cover;
   }
