--- a/src/styles/core-style.scss
+++ b/src/styles/core-style.scss
@@ -390,3 +390,16 @@ $x1: 0;
 .mat-icon-size {
 	font-size: 40px;
   }
+
+  mat-card img{
+	object-fit: cover; /*this makes the image in src fit to the size specified below*/
+	width: 50%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+	height: 50%
+
+  }
+  .card-size {
+	max-width: 400px;
+	max-height: 600px;
+  }
+  
+
