--- a/src/app/home/components/customer-home/customer-home.component.scss
+++ b/src/app/home/components/customer-home/customer-home.component.scss
@@ -11,3 +11,18 @@
     // background-image: url('https://i.ibb.co/Jdx0NbM/27797943-1552092604911964-5726697049196892277-o.jpg');
     background-size: cover;
   }
+
+
+  .mat-card.scrollable-content {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+  
+    > .mat-card-title-group {
+      display: block;
+    }
+  
+    > .mat-card-content {
+      overflow-y: auto;
+    }
+  }
