--- a/src/app/home/components/customer-home/customer-home.component.html
+++ b/src/app/home/components/customer-home/customer-home.component.html
@@ -1,46 +1,51 @@
-<div
-  fxLayout="row wrap"
-  fxLayoutAlign="start start"
-  fxLayoutGap="20px"
-  class="mt-10"
->
-  
-  <mat-card
-    [class.mat-elevation-z8]="true"
-    *ngFor="let product of productData"
-    class="card-size"
-  >
-    <mat-card-header>
+<div fxLayout="column" fxLayoutAlign="center stretch" fxLayoutGap="12px">
+<div class='px-64 pb-12 pt-64'> 
+    <mat-form-field  appearance="outline" class='w-100-p'>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search Products">
+    <mat-icon matPrefix class='mr-16'>search</mat-icon>
+    </mat-form-field>
+</div>
+<div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px" class="px-64 pb-64">
+    
+    
+  <mat-card [class.mat-elevation-z8]="true" *ngFor="let product of productData" class="w-280 h-440 scrollable-content mt-20">
+    <!-- <mat-card-header>
       <div mat-card-avatar class="example-header-image">
-        <img
-          mat-card-avatar
-          src="https://i.ibb.co/Jdx0NbM/27797943-1552092604911964-5726697049196892277-o.jpg"
-        />
+        <img mat-card-avatar src="https://i.ibb.co/Jdx0NbM/27797943-1552092604911964-5726697049196892277-o.jpg" />
       </div>
       <mat-card-title>Jewel Rana</mat-card-title>
       <mat-card-subtitle>Paikari.com</mat-card-subtitle>
-    </mat-card-header>
-    <div *ngIf="product.productImageUrl">
-      <img [src]="product.productImageUrl" />
+    </mat-card-header> -->
+
+    <div *ngIf="product.productImageUrl" fxLayout="row" fxLayoutAlign="center center" class='mb-16 w-280 h-200'>
+      <img [src]="product.productImageUrl"  width="280px" height="200px"/>
+    </div>
+    <div *ngIf="product" class='pt-12'>
+      <div fxLayout="row" fxLayoutAlign="center center" class='pb-12'>
+        <div class='font-size-20'><span class='secondary-text-color'> {{ product.productname }}</span></div>
+      </div>
     </div>
 
-    <mat-card-content *ngIf="product">
-      <h1>{{ product.productname }}</h1>
-      <h3>BDT {{ product.productprice }} /Unit</h3>
-      <h4>Minimum Order- {{ product.productquantity }}</h4>
-      <p>{{ product.productDescription }}</p>
+    <mat-card-content class='h-100'>
+
+      <div *ngIf="product" class='py-12'>
+        <div fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="8px">
+          <div class='font-size-16'>Price: <span class='accepted-color'>BDT {{ product.productprice }}/Unit</span></div>
+          <div class='font-size-16'>Minimum Order- <span class='rejected-color'>{{ product.productquantity }}</span></div>
+          <div class='font-size-12 word-break-all'>{{ product.productDescription }}</div>
+        </div>
+      </div>
     </mat-card-content>
-    <div fxLayoutAlign="end end">
-      <mat-card-actions>
-        <button
-          class="cursor-pointer"
-          color="primary"
-          mat-fab
-          aria-label="Example icon-button with a heart icon"
-        >
+
+    <mat-card-actions>
+      <div fxLayout="row" fxLayoutAlign="end center">
+        <button class="cursor-pointer" color="primary" mat-fab aria-label="Example icon-button with a heart icon" matTooltip="Add product to cart">
           <mat-icon (click)="addToCart(product)">add_shopping_cart</mat-icon>
         </button>
-      </mat-card-actions>
-    </div>
+      </div>
+
+    </mat-card-actions>
   </mat-card>
+</div>
+
 </div>
