--- a/src/app/root/nav-side-bar/nav-side-bar.component.html
+++ b/src/app/root/nav-side-bar/nav-side-bar.component.html
@@ -1,3 +1,5 @@
+<ngx-spinner></ngx-spinner>
+
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
