--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -13,7 +13,7 @@ $light-focused: rgba(white, 0.12);
 $primary-color:#004d40;
 $secondary-color:#0072D0;
 $third-color:#288cd6;
-$accepted-color:#2bd057;
+$accepted-color:#0b922f;
 $rejected-color:#f44336;
 $white-color: white;
 $black-color:black;
