Password change done

--- a/src/app/customer/components/customer-information/customer-information.component.html
+++ b/src/app/customer/components/customer-information/customer-information.component.html
@@ -33,7 +33,7 @@
           <button mat-raised-button color="primary" (click)="routeToUpdateProfile()">Update My Profile</button>
         </div>
         <div>
-          <button mat-raised-button color="primary">Change Password</button>
+          <button mat-raised-button color="primary" (click)='openChangePasswordModal()'>Change Password</button>
         </div>
       </div>
     </div>
