--- a/src/app/root/menu-item-bar/menu-item-bar.component.html
+++ b/src/app/root/menu-item-bar/menu-item-bar.component.html
@@ -120,10 +120,7 @@
       <button mat-button [matMenuTriggerFor]="menu">
         <mat-icon class="mat-icon-size"> shopping_cart </mat-icon>
       </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>Item 1</button>
-        <button mat-menu-item>Item 2</button>
-      </mat-menu>
+      
     </div>
 
     <div>
@@ -131,9 +128,21 @@
         <mat-icon class="mat-icon-size"> account_circle </mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <div *ngFor="let accountItems of accountbar; let i = index">
+        <!-- <div *ngFor="let accountItems of accountbar; let i = index">
             <button mat-menu-item (click)="route(accountItems.url)">{{accountItems.name}}</button>
-          <!-- <span>{{accountItems.name}}</span> -->
+          <span>{{accountItems.name}}</span>
+        </div> -->
+        <div>
+          <button mat-menu-item (click)="myAccountClick()">My Account</button>
+        </div>
+        <div>
+          <button mat-menu-item (click)="myOrderClick()">My Order</button>
+        </div>
+        <div>
+          <button mat-menu-item (click)="transactionHistoryClick()">Transaction History</button>
+        </div>
+        <div>
+          <button mat-menu-item (click)="signOutClick()">Sign Out</button>
         </div>
       </mat-menu>
     </div>
