--- a/src/app/root/menu-item-bar/menu-item-bar.component.html
+++ b/src/app/root/menu-item-bar/menu-item-bar.component.html
@@ -12,94 +12,10 @@
     fxLayoutGap="10px"
     class="cursor-pointer"
   >
-    <span>{{ title }}</span>
+    <span (click)="homeClick()">{{ title }}</span>
   </div>
-  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="30px">
-    <div *ngFor="let menuItem of menubar; let i = index" class="cursor-pointer">
-      <div *ngIf="menuItem.name !== 'Category'">
-        <div
-          (click)="route(menuItem.url); selectRow(i)"
-          [class.active]="i == selectedRow"
-        >
-          <span> {{ menuItem.name }}</span>
-        </div>
-      </div>
-      <div *ngIf="menuItem.name == 'Category'">
-        <!-- <div [matMenuTriggerFor]="menu" #matMenuTrigger="matMenuTrigger" (mouseover)="matMenuTrigger.openMenu()"   >
-          Category
-        </div>
-        <button mat-button [matMenuTriggerFor]="menu"></button>
-        <mat-menu #menu="matMenu"  >
-            <div >
-                    <button mat-menu-item>Item 1</button>
-                    <button mat-menu-item>Item 2</button>
-            </div>
-         
-        </mat-menu>
-        </div> -->
-
-        <!-- <button mat-button [matMenuTriggerFor]="animals">Animal index</button> -->
-
-        <div [matMenuTriggerFor]="animals">
-          Category
-        </div>
-
-        <mat-menu #animals="matMenu">
-          <button mat-menu-item [matMenuTriggerFor]="vertebrates">
-            Vertebrates
-          </button>
-          <button mat-menu-item [matMenuTriggerFor]="invertebrates">
-            Invertebrates
-          </button>
-        </mat-menu>
-
-        <mat-menu #vertebrates="matMenu">
-          <button mat-menu-item [matMenuTriggerFor]="fish">Fishes</button>
-          <button mat-menu-item [matMenuTriggerFor]="amphibians">
-            Amphibians
-          </button>
-          <button mat-menu-item [matMenuTriggerFor]="reptiles">Reptiles</button>
-          <button mat-menu-item>Birds</button>
-          <button mat-menu-item>Mammals</button>
-        </mat-menu>
-
-        <mat-menu #invertebrates="matMenu">
-          <button mat-menu-item>Insects</button>
-          <button mat-menu-item>Molluscs</button>
-          <button mat-menu-item>Crustaceans</button>
-          <button mat-menu-item>Corals</button>
-          <button mat-menu-item>Arachnids</button>
-          <button mat-menu-item>Velvet worms</button>
-          <button mat-menu-item>Horseshoe crabs</button>
-        </mat-menu>
-
-        <mat-menu #fish="matMenu">
-          <button mat-menu-item>Baikal oilfish</button>
-          <button mat-menu-item>Bala shark</button>
-          <button mat-menu-item>Ballan wrasse</button>
-          <button mat-menu-item>Bamboo shark</button>
-          <button mat-menu-item>Banded killifish</button>
-        </mat-menu>
-
-        <mat-menu #amphibians="matMenu">
-          <button mat-menu-item>Sonoran desert toad</button>
-          <button mat-menu-item>Western toad</button>
-          <button mat-menu-item>Arroyo toad</button>
-          <button mat-menu-item>Yosemite toad</button>
-        </mat-menu>
-
-        <mat-menu #reptiles="matMenu">
-          <button mat-menu-item>Banded Day Gecko</button>
-          <button mat-menu-item>Banded Gila Monster</button>
-          <button mat-menu-item>Black Tree Monitor</button>
-          <button mat-menu-item>Blue Spiny Lizard</button>
-          <button mat-menu-item disabled>Velociraptor</button>
-        </mat-menu>
-
-        <!-- end of test -->
-      </div>
-    </div>
-  </div>
+  
+      
   <div
     fxLayout="row"
     fxLayoutAlign="end center"
@@ -107,20 +23,15 @@
     class="cursor-pointer"
   >
     <div>
-      <button mat-button [matMenuTriggerFor]="menu">
+      <button mat-button (click)="notificationClick()">
         <mat-icon class="mat-icon-size"> notification_important </mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item>Item 1</button>
-        <button mat-menu-item>Item 2</button>
-      </mat-menu>
+      </button>      
     </div>
 
     <div>
-      <button mat-button [matMenuTriggerFor]="menu">
+      <button mat-button (click)="shoppingCartClick()">
         <mat-icon class="mat-icon-size"> shopping_cart </mat-icon>
-      </button>
-      
+      </button>    
     </div>
 
     <div>
@@ -128,10 +39,6 @@
         <mat-icon class="mat-icon-size"> account_circle </mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <!-- <div *ngFor="let accountItems of accountbar; let i = index">
-            <button mat-menu-item (click)="route(accountItems.url)">{{accountItems.name}}</button>
-          <span>{{accountItems.name}}</span>
-        </div> -->
         <div>
           <button mat-menu-item (click)="myAccountClick()">My Account</button>
         </div>
