--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="example-button-row m-40" fxLayout="column" fxLayoutAlign="end end">
-    <button mat-raised-button color="warn" class="w-250 h-58 fontSize-B">Create Product</button>
+    <button mat-raised-button color="warn" class="w-250 h-58 fontSize-B" (click)="addProductClick()" >Create Product</button>
   </div>
   
   <div fxLayout="column" class="m-40 mat-elevation-z8">
